[package]
name = "DistanceAlarm"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# --- ARM Cortex-M / Critical Sections ---
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
static_cell = "2.1.1"

# --- Embassy / Async Runtime ---
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-time-driver = "0.2.1" 
embassy-embedded-hal = { version = "0.5.0", features = [
    "defmt",
] } 
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] } # RP2040 board support

# --- Peripherals / Connectivity ---
cyw43 = { version = "0.5.0", features = [
    "defmt",
    "firmware-logs",
] } 
cyw43-pio = { version = "0.8.0", features = ["defmt"] } 

# --- Debug / Logging / Panic ---
defmt = "1.0.1"                                                 
defmt-rtt = "1.0.0"                                             
panic-probe = { version = "1.0.0", features = ["print-defmt"] } 
log = "0.4.27"                                                 

# --- Math / Data Structures ---
fixed = "1.29.0"                                     
fixed-macro = "1.2.0"                                  
heapless = "0.9.1"                                    
rand = { version = "0.9.2", default-features = false } 

# --- Embedded HAL / Async Traits ---
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = [
    "async",
] } 
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] } 
embedded-storage = "0.3.1" #

# --- User / Custom Libraries ---
ultra_measure = { git = "https://github.com/Silen1t/UltraMeasure.git" } 
lcd1602_utils = { git = "https://github.com/Silen1t/lcd1602-utils.git" } 

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
